--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
     "@progress/kendo-angular-buttons": "^5.4.2",
     "@progress/kendo-angular-common": "^1.0.0",
     "@progress/kendo-angular-inputs": "^6.6.0",
+    "@progress/kendo-angular-intl": "^2.0.0",
     "@progress/kendo-angular-l10n": "^2.0.0",
     "@progress/kendo-angular-popup": "^3.0.0",
+    "@progress/kendo-drawing": "^1.5.12",
     "@progress/kendo-theme-default": "latest",
     "@progress/kendo-theme-material": "^3.16.0",
+    "bootstrap": "^3.4.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "@progress/kendo-angular-intl": "^2.0.0",
-    "@progress/kendo-drawing": "^1.5.12"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.7",
